dev_kong-my-app_pre_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-1
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: my-kong-plugin-url-replace, rate-limiting-myapp
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /maps/my-app
        backend:
          service:
            name: kong-my-app
            port:
              number: 8200
